# multi_sensor_calibration

./: .gitignore  README.md
accumulator/: CMakeLists.txt  package.xml
accumulator/data/: example_data.yaml
accumulator/include/accumulator/: accumulator.hpp  yaml.hpp
accumulator/msg/: AccumulatedPatterns.msg
accumulator/src/: node.cpp  yaml.cpp
accumulator/srv/: SendPatterns.srv  SendString.srv
calibration_common/: CMakeLists.txt  LICENSE.md  package.xml
calibration_common/include/common/: robust_least_squares.hpp
calibration_common/src/: robust_least_squares.cpp
calibration_interfaces/: CMakeLists.txt  package.xml
calibration_interfaces/srv/: SendUInt.srv
common/: CMakeLists.txt  package.xml
docs/: calibration_board.md  detectors.md
lidar_detector/: CMakeLists.txt  package.xml
lidar_detector/config/: config.yaml  config_leica.yaml
lidar_detector/example/: example
lidar_detector/include/lidar_detector/: config.hpp  keypoint_detection.hpp  node_lib.hpp  visualize.hpp  yaml.hpp
lidar_detector/src/: cli.cpp  example  node.cpp
lidar_detector/src/lib/: keypoint_detection.cpp  node_lib.cpp  yaml.cpp
mono_detector/: CMakeLists.txt  package.xml
mono_detector/config/: image_processing.yaml  intrinsics.ini  object_points.yaml
mono_detector/include/mono_detector/: detector.hpp  eigen.hpp  node_lib.hpp  pnp.hpp  types.hpp  util.hpp  yaml.hpp
mono_detector/src/: cli.cpp  example  node.cpp
mono_detector/src/lib/: detector.cpp  node_lib.cpp  pnp.cpp  util.cpp  yaml.cpp
mono_detector/test/: yaml.cpp
multi_sensor_calibration_launch/: CMakeLists.txt  package.xml
multi_sensor_calibration_launch/launch/: accumulator.launch  accumulator_launch.py  detectors.launch  detectors_launch.py  extrinsic_calibration_launch.py  optimizer.launch  optimizer_launch.py  prius_extrinsic_calibration.launch
multi_sensor_calibration_launch/rviz/: calibration.rviz
multi_sensor_calibration_launch/scripts/: play_rosbags_with_detectors.sh  update_prius_urdf.sh
optimization/: CMakeLists.txt  package.xml  setup.cfg  setup.py
optimization/data/example_data/: camera.csv  ignored_measurements.yaml  lidar.csv  lidar_with_error.csv  radar.csv  radar_3D.csv  radar_with_error.csv
optimization/lib/icp/: icp.py
optimization/optimization/: server.py
optimization/optimization/optimization/: MCPE.py  calibration_board.py  helper_functions.py  io.py  iterative_covariance_estimation.py
optimization/src/: client.py  main.py  server.py  tune_optimizer.py
optimization/src/optimization/: FCPE.py  MCPE.py  PSE.py  calibration_board.py  config.py  helper_functions.py  io.py  iterative_covariance_estimation.py  optimize.py  plotting.py  ransac.py
radar_detector/: CMakeLists.txt  package.xml
radar_detector/include/radar_detector/: keypoint_detection.hpp  node_lib.hpp
radar_detector/src/: node.cpp
radar_detector/src/lib/: keypoint_detection.cpp  node_lib.cpp
stereo_detector/: CMakeLists.txt  package.xml
stereo_detector/config/: config.yaml
stereo_detector/include/stereo_detector/: config.hpp  keypoint_detection.hpp  node_lib.hpp  yaml.hpp
stereo_detector/src/: cli.cpp  example  node.cpp
stereo_detector/src/lib/: keypoint_detection.cpp  node_lib.cpp  yaml.cpp
urdf_calibration/: CMakeLists.txt  README.md  package.xml
urdf_calibration/doc/: example_urdf_diagram.xml
urdf_calibration/include/urdf_calibration/: eigen_kdl.hpp  eigen_string.hpp  types.hpp  urdf_calibration.hpp  yaml.hpp
urdf_calibration/src/: main.cpp  urdf_calibration.cpp  yaml.cpp
urdf_calibration/test/: calibration.urdf  calibration.yaml  output.urdf  vehicle.urdf
