<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>accumulator</name>
  <version>0.0.0</version>
  <description>The accumulator package</description>

  <maintainer email="r.m.ensing@tudelft.nl">rmensing</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>calibration_interfaces</build_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
