<?xml version="1.0"?>
<package format="2">
  <name>lidar_detector</name>
  <version>0.0.0</version>
  <description>The lidar_detector package</description>

  <maintainer email="r.m.ensing@tudelft.nl">rmensing</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>calibration_common</build_depend>

  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
