<?xml version="1.0"?>
<package format="2">
  <name>mono_detector</name>
  <version>0.0.0</version>
  <description>The mono_detector package</description>

	<maintainer email="r.m.ensing@tudelft.nl">rmensing</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>opencv3</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
