<?xml version="1.0"?>
<package format="2">
  <name>multi_sensor_calibration_launch</name>
  <version>0.0.0</version>
  <description>The multi_sensor_calibration_launch package</description>

  <maintainer email="j.f.m.domhof@tudelft.nl">jfmdomhof</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
