<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>optimization</name>
    <version>0.0.0</version>
    <description>The optimization package</description>

    <maintainer email="j.f.m.domhof@tudelft.nl">jfmdomhof</maintainer>

    <license>GPLv3</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>calibration_interfaces</exec_depend>
    <!-- TODO(mwojcik): add both to rosdep mapping https://github.com/ros/rosdistro/blob/master/rosdep/python.yaml -->
    <!-- <exec_depend>rmsd</exec_depend>
    <exec_depend>tikzplotlib</exec_depend> -->

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
