<?xml version="1.0"?>
<package format="2">
	<name>stereo_detector</name>
	<version>0.0.0</version>
	<description>The stereo_detector package</description>

	<maintainer email="r.m.ensing@tudelft.nl">rmensing</maintainer>


	<license>GPLv2</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>common</depend>
	<depend>cmake_modules</depend>
	<depend>image_geometry</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
	<depend>stereo_msgs</depend>
	<depend>yaml-cpp</depend>
	<depend>visualization_msgs</depend>

</package>
